hyperdb-api-derive/tests/ui/fail/derive_table_unrecognized_attr.rs
use hyperdb_api_derive::Table;

#[derive(Table)]
#[hyperdb(unknown_attr)]
struct User {
    id: i64,
}

fn main() {}
